--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^4.5.136",
-    "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5"
+    "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
+    "tesseract.js": "https://cdn.jsdelivr.net/npm/tesseract.js@5.1.0/dist/tesseract.esm.min.js"
   }
 }
 </script>
